Fix java 17 compilation (#77)
* Fix compilation of Java 17+ sources